<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/mProfileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/img_des"
        android:layout_gravity="center"
        android:src="@drawable/ic_insititute"
        android:layout_margin="@dimen/_16sdp" />

    <com.sambhav.tws.utils.customView.CustomTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:font_name="bold"
        android:gravity="center"
        android:text="@string/student_title_text"
        android:textSize="18sp"
        android:layout_marginTop="0dp"
        android:textColor="@color/colorTextBlack"/>

    <com.sambhav.tws.utils.customView.CustomTextView
        android:id="@+id/tvTitleDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:font_name="light"
        android:gravity="center"
        android:layout_margin="5dp"
        android:text="@string/student_title_text_des"
        android:textSize="12sp"
        android:layout_marginTop="0dp"
        android:textColor="@color/colorTextBlack"/>

</LinearLayout>