<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.sambhav.tws.base.BaseViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:bind="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.sambhav.tws.ui.profile.activities.TeacherProfileActivity">

        <include layout="@layout/layout_login_back" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include layout="@layout/layout_back_card" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <include layout="@layout/layout_login_header" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <com.sambhav.tws.utils.customView.CustomTextView
                        style="@style/KeyTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/institute_name"
                        app:font_name="medium" />

                    <com.sambhav.tws.utils.customView.CustomEditTextView
                        style="@style/ValueEditTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="abc institute" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <com.sambhav.tws.utils.customView.CustomTextView
                        style="@style/KeyTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/location"
                        app:font_name="medium" />

                    <com.sambhav.tws.utils.customView.CustomEditTextView
                        style="@style/ValueEditTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/hint_kota_rajasthan" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <com.sambhav.tws.utils.customView.CustomTextView
                        style="@style/KeyTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/contact_info"
                        app:font_name="medium" />

                    <com.sambhav.tws.utils.customView.CustomEditTextView
                        style="@style/ValueEditTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/hint_xxx_xx_xxxx"
                        android:inputType="number"
                        android:maxLength="10" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingBottom="30dp">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <com.sambhav.tws.utils.customView.CustomButton
                        android:id="@+id/mSubmit"
                        style="@style/ButtonView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/submit"
                        app:font_name="bold" />

                </LinearLayout>

            </LinearLayout>

            <include
                layout="@layout/layout_no_item"
                bind:viewModel="@{viewModel}" />

        </androidx.cardview.widget.CardView>

        <include
            layout="@layout/dialog_progress"
            bind:viewModel="@{viewModel}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>