<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.sambhav.tws.base.BaseViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:bind="http://schemas.android.com/apk/res-auto"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.sambhav.tws.ui.schedule.activities.ScheduleActivity">

        <include layout="@layout/layout_login_back" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/back_button_height"
            android:layout_height="@dimen/back_button_height"
            android:src="@drawable/ic_arrow"
            android:tint="@color/colorPrimary"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:padding="@dimen/back_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/bg_round_white"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include layout="@layout/layout_back_card" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <include layout="@layout/layout_login_header" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp">

                    <com.sambhav.tws.utils.customView.CustomTextView
                        style="@style/KeyTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/select_subject"
                        app:font_name="medium" />

                    <include
                        android:id="@+id/subject"
                        layout="@layout/layout_spinner"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_weight="2"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp">

                    <com.sambhav.tws.utils.customView.CustomTextView
                        style="@style/KeyTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/occurance"
                        app:font_name="medium" />

                    <include
                        android:id="@+id/occurance"
                        layout="@layout/layout_spinner"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_weight="2"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layCustomDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:visibility="visible">

                    <com.sambhav.tws.utils.customView.CustomTextView
                        style="@style/KeyTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:visibility="invisible" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="2"
                        app:cardCornerRadius="2dp"
                        app:cardElevation="4dp">

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/chipChopGroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        </com.google.android.material.chip.ChipGroup>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp">

                    <com.sambhav.tws.utils.customView.CustomTextView
                        style="@style/KeyTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/date"
                        app:font_name="medium" />

                    <com.sambhav.tws.utils.customView.CustomEditTextView
                        android:id="@+id/etDate"
                        style="@style/ValueEditTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:editable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="25/5/2020" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp">

                    <com.sambhav.tws.utils.customView.CustomTextView
                        style="@style/KeyTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/time"
                        app:font_name="medium" />

                    <com.sambhav.tws.utils.customView.CustomEditTextView
                        android:id="@+id/etTime"
                        style="@style/ValueEditTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:editable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="02:51 PM" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_20sdp">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <com.sambhav.tws.utils.customView.CustomButton
                        android:id="@+id/btnSubmit"
                        style="@style/ButtonView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/submit"
                        app:font_name="bold" />

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <include
            layout="@layout/layout_no_item"
            bind:viewModel="@{viewModel}"/>

        <include
            layout="@layout/dialog_progress"
            bind:viewModel="@{viewModel}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
